--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 250px;
   padding: 20px;
   color: white;
 }
@@ -26,16 +26,25 @@
   text-align: center;
   display: grid;
   grid-template-columns: 200px 200px 200px;
-  grid-gap: 25px;
+  grid-gap: 20px;
+  padding: 20px;
 }
 
 .grid-item {
   height: 150px;
   width: 150px;
+  border-style: double;
+  border-top-width: thick;
+}
+
+.score {
+  background-color: white;
+  color: black;
+  font-size: small;
 }
 
 .Fauna1 {
-  height: 50px;
+  height: 100px;
 }
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
